--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
             <div class="profile-section" data-aos="fade-left">
                 <div class="image-wrapper">
                     <img 
-                        src="{{ url_for('static', filename='image/IMG_6571-p (3).png') }}" 
+                        src="{{ url_for('static', filename='image/IMG_6571-p__.png') }}" 
                         alt="{{ personal_info.name }}" 
                         class="profile-image"
                     >
@@ -595,7 +595,7 @@
                         <span class="tech-tag">GPT</span>
                         <span class="tech-tag">ML Models</span>
                     </div>
-                    <a href="https://app.devolvedai.com/" class="project-link">
+                    <a href="https://www.devolvedai.com/athena-ai" class="project-link">
                         View Project <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
