--- a/templates/index.html
+++ b/templates/index.html
@@ -15,12 +15,6 @@
 
 
 
-<a href='https://free-hit-counters.net/'>free-hit-counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2b7d2741afa0bb85bb2b282fe509f93b0c1cd173'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1443315/t/0"></script>
-
-
-
-
 <!-- ----------------------------------Chatbot ----------------------------------->
 <div class="chatbot-bubble" onclick="toggleChat()">
     <span class="bubble-icon">💬</span>
@@ -99,6 +93,18 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
+        
+        <div style="
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            z-index: 99999;
+        ">
+            <a href='https://free-hit-counters.net/'>free-hit-counters</a>
+            <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2b7d2741afa0bb85bb2b282fe509f93b0c1cd173'></script>
+            <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1443315/t/0"></script>
+        </div>
+
         <div class="hero-container">
             <div class="hero-content">
                 <h1 data-aos="fade-right">Machine Learning & AI Solutions</h1>
@@ -137,6 +143,7 @@
                 </div>
             </div>
         </div>
+    
     </section>
 
 
