Update visitor counter links and scripts

--- a/templates/index.html
+++ b/templates/index.html
@@ -1125,9 +1125,9 @@ document.addEventListener('click', function(event) {
     left: 20px;
     z-index: 99999;
 ">
-    <a href='https://free-hit-counters.net/'>free-hit-counters</a>
-    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2b7d2741afa0bb85bb2b282fe509f93b0c1cd173'></script>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1443315/t/0"></script>
+    <a href='https://www.free-counters.org/'>Counter</a>
+    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=7c7da60f1760cc794c8e8fe08c7c1696f4a26eef'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1443780/t/6"></script>
 </div>
 
 
